--- a/style.css
+++ b/style.css
@@ -1,17 +1,27 @@
 *{
     margin: 0;
+    margin-left: 1%;
+    margin-right: 1%;
     padding: 0;
+}
+
+nav{
+    margin-left: 200px;
+    margin-right: 200px;
 }
 
 img{
     margin: auto;
+    width: 78.1vw;
     display: block;
 }
 
 h1{
     color: black;
+    margin: 0 3.9vw 0 3.9vw;
     background-color:#9b0034 ;
     font-size: 100px;
+    text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
