--- a/style.css
+++ b/style.css
@@ -5,6 +5,22 @@
     padding: 0;
 }
 
+button{
+    width: 300px;
+    height: 150px;
+    margin: 50px;
+}
+
+div{
+    display: inline-block;
+}
+
+.container { 
+    width: 700px; 
+    margin-left: auto;
+    margin-right: auto; 
+}
+
 nav{
     margin-left: 200px;
     margin-right: 200px;
