--- a/style.css
+++ b/style.css
@@ -5,20 +5,32 @@
     padding: 0;
 }
 
+
+.margem{
+    margin: 0.1vw 0.1vw 0.1vw 0.1vw; 
+}
+
+
 button{
-    width: 300px;
-    height: 150px;
-    margin: 50px;
+    width: 130px;
+    height: 130px;
+    margin: 30px;
 }
 
 div{
-    display: inline-block;
+    
 }
 
 .container { 
-    width: 700px; 
+    display: flex;
+    width: 400px; 
     margin-left: auto;
     margin-right: auto; 
+}
+
+img{
+    margin: auto;
+    display: block;
 }
 
 nav{
@@ -26,15 +38,9 @@ nav{
     margin-right: 200px;
 }
 
-img{
-    margin: auto;
-    width: 78.1vw;
-    display: block;
-}
-
 h1{
     color: black;
-    margin: 0 3.9vw 0 3.9vw;
+    margin: 0 0.1vw 0.1vw;
     background-color:#9b0034 ;
     font-size: 100px;
     text-align: center;
@@ -43,4 +49,6 @@ h1{
 
 body{
     background-color: #c6171f;
+    margin-left: 250px;
+    margin-right: 250px;
 }
