--- a/style.css
+++ b/style.css
@@ -12,9 +12,12 @@
 
 
 button{
-    width: 130px;
-    height: 130px;
+    width: 200px;
+    height: 100px;
     margin: 30px;
+    font-family:  Calibri;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 div{
@@ -25,12 +28,15 @@ div{
     display: flex;
     width: 400px; 
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
+    justify-content: center; 
 }
 
-img{
+.img_charlie{
     margin: auto;
     display: block;
+    height: 579px;
+    width: 448px;
 }
 
 nav{
