--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
 *{
     margin: 0;
-    margin-left: 1%;
-    margin-right: 1%;
     padding: 0;
 }
 
 
-.margem{
-    margin: 0.1vw 0.1vw 0.1vw 0.1vw; 
-}
 
 
 button{
@@ -20,13 +15,14 @@ button{
     font-weight: bold;
 }
 
-div{
-    
+button:hover{
+    background-image: url(Imagens_Estilos/btn-archives-on.jpg);
 }
+
 
 .container { 
     display: flex;
-    width: 400px; 
+    width: 432px; 
     margin-left: auto;
     margin-right: auto;
     justify-content: center; 
@@ -46,9 +42,9 @@ nav{
 
 h1{
     color: black;
-    margin: 0 0.1vw 0.1vw;
+    margin: 0.1vw 0.1vw;
     background-color:#9b0034 ;
-    font-size: 100px;
+    font-size: 5vw;
     text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
@@ -57,4 +53,14 @@ body{
     background-color: #c6171f;
     margin-left: 250px;
     margin-right: 250px;
+}
+
+@media (max-width: 420px) {
+    .container { 
+        display: flex;
+        width: 100px; 
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center; 
+    }
 }
